<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.MyGroupActivity">

    <LinearLayout
        android:id="@+id/actionLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/mygroup_topRL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:background="@drawable/ic_group_background">

            <ImageButton
                android:id="@+id/mygroup_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/lightGreen"
                android:src="@drawable/ic_back_button" />

            <ImageButton
                android:id="@+id/mygroup_menuline_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/lightGreen"
                android:src="@drawable/ic_menu_line"
                android:onClick="showPopup"/>

            <Button
                android:id="@+id/remove_group_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/remove_group"
                android:textColor="@color/red_save"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/group_backgroundLL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:clipToPadding="false"
                    app:cardCornerRadius="30dp"
                    app:cardUseCompatPadding="false">

                    <ImageView
                        android:id="@+id/group_pictureIv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:padding="9dp"
                        android:background="@drawable/mygroup_photo_background"
                        tools:srcCompat="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/group_title_mygroupTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/avenir"
                    android:textStyle="bold"
                    android:elevation="5dp"
                    android:text="@string/group_title"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mygroup_action_buttonsLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/group_backgroundLL1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/mygroup_top_buttonsLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/group_backgroundLL1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/list_bttnLL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginHorizontal="30dp">

                            <ImageButton
                                android:id="@+id/task_listButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/group_top_button"
                                android:src="@drawable/ic_task_list" />

                            <TextView
                                android:id="@+id/list_buttonTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="5dp"
                                android:fontFamily="@font/avenir"
                                android:text="@string/list"
                                android:textColor="@color/white"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/events_bttnLL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginHorizontal="30dp"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/eventsButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/group_top_button"
                                android:src="@drawable/ic_home" />

                            <TextView
                                android:id="@+id/events_buttonTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="5dp"
                                android:fontFamily="@font/avenir"
                                android:text="@string/events"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/remove_friend_linear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:visibility="invisible"
                            android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/removeFriendButton"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_remove_user"
                            android:src="@drawable/ic_remove_user"
                            android:layout_marginHorizontal="40dp" />

                        <TextView
                            android:id="@+id/remove_friend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="5dp"
                            android:fontFamily="@font/avenir"
                            android:text="@string/remove_friend"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/group_op_bttnLL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/groupOpButton"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/group_top_button"
                                android:src="@drawable/ic_group_operations"
                                android:layout_marginHorizontal="40dp"/>

                            <TextView
                                android:id="@+id/group_op_buttonTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="5dp"
                                android:fontFamily="@font/avenir"
                                android:text="@string/group_operations"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mygroup_bottomRL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.6"
            android:background="@color/white"
            android:gravity="center">


            <fragment
                android:id="@+id/fragment_place_mygroup"
                android:name="androidx.navigation.fragment.NavHostFragment"
                app:navGraph="@navigation/my_group_navi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/recycler_viewRL2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:paddingEnd="18dp"
                android:translationZ="90dp">

                <ImageView
                    android:id="@+id/add_expense"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/add_expense_btn" />
            </RelativeLayout>

        </RelativeLayout>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_navi_back"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
            app:itemIconTint="@drawable/nav_item_background"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu" />

        

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>