<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/add_budget_text" />

        <EditText
            android:id="@+id/add_budget_edit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/avenir"
            android:inputType="number"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/add_budget_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:textSize="18dp"
            android:minWidth="150dp"
            android:textStyle="bold"
            android:background="@drawable/button_smooth_corner"
            android:text="Tamam" />
    </LinearLayout>

</androidx.cardview.widget.CardView>