...
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5000 TL"
            android:fontFamily="@font/avenir"
            android:textSize="28sp"
            android:textColor="@color/black"
...
